Sun Nov 14 20:12:03 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c: improve responseness under load by handling glue
	layer events at the same priority as GUI events.

Fri Nov  5 02:32:57 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkparam.[hc]: added gxk_param_add_grab_widget() for
	which pointer grabs cause undo grouping. implemented grouping hooks
	for parameter bindings. limited size-groups to 256.

	* beast-gtk/gxk/gxkparam-scale.c:
	* beast-gtk/gxk/gxkparam-spinner.c:
	* beast-gtk/bstparam-scale.c:
	* beast-gtk/bstparam-note-spinner.c: undo-group parameter changes
	across pointer grabs.

	* beast-gtk/bstparam.c: implemented undo grouping for proxy
	parameter bindings.

	* beast-gtk/bstcanvassource.c: undo-group source movement.

	* beast-gtk/bstcanvaslink.c: cleanups.

Thu Nov  4 16:23:51 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsttrackroll.c (track_roll_idle_update_scopes): redraw the
	whole widget to work around spurious redraw problems.

Sat Oct 30 17:38:46 2004  Tim Janik  <timj@gtk.org>

	* docs/site-development.texi: moved po statistic links from gnome-2.10/
	to gnome-HEAD/.

Sat Oct 30 16:20:10 2004  Tim Janik  <timj@gtk.org>

	* configure.in: depend on gtk+-2.4.11, as earlier versions have severe
	resizing bugs triggered by beast.

	* beast-gtk/gxk/gxkutils.c (_gxk_init_utils): removed <=gtk+-2.4.10 
	resizing work-around, since it may triggerer endless loops under
	certain circumstances.

Sat Oct 30 13:22:23 2004  Tim Janik  <timj@gtk.org>

	* docs/plugin-devel.texi: introduced :db-value:, :db-volume: and
	:db-range: property options, removed :DB:, documented DBVolume().

	* beast-gtk/bstbuseditor.c: adapt to BseBus property changes.

	* beast-gtk/bstdbmeter.c: added decibel conversion for non db-value
	properties.

	* beast-gtk/gxk/gxkparam-scale.c:
	* beast-gtk/bstparam-scale.c: use decibel adjustment if appropriate.

	* beast-gtk/gxk/gxkparam-spinner.c: improved size requisition and